cmake_minimum_required(VERSION 3.4)
project(C___in_24_hours)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp exercises/exercise1.cpp exercises/exercise1.h exercises/Hour03Exercise1.cpp)
add_executable(C___in_24_hours ${SOURCE_FILES})
add_executable(Sizer source/chapter03/Sizer.cpp)
add_executable(NewRectangle source/chapter03/NewRectangle.cpp)
add_executable(hour03-exercise01 exercises/Hour03Exercise1.cpp exercises/Hour03Exercise2.cpp exercises/Hour05Exercise1.cpp exercises/Hour05Exercise2.cpp)
add_executable(hour03-exercise02 exercises/Hour03Exercise2.cpp)
add_executable(Expression source/chapter04/Expression.cpp)
add_executable(Years source/chapter04/Years.cpp)
add_executable(Grader source/chapter04/Grader.cpp)
add_executable(Hour04exercise1 exercises/Hour04exercise1.cpp)
add_executable(Hour04Exercise2 exercises/Hour04Exercise2.cpp)
add_executable(Area source/chapter05/Area.cpp)
add_executable(Hour05Exercise1 exercises/Hour05Exercise1.cpp)
add_executable(Hour05Exercise2 exercises/Hour05Exercise2.cpp)
add_executable(Badger source/chapter06/Badger.cpp)
add_executable(Motto source/chapter01/Motto.cpp)